# llm-nexus

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  PROGRESS.json  README.md
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
config/: models.toml  providers.toml
config/presets/: fireworks.toml  groq.toml  ollama.toml  together.toml  vllm.toml
crates/llm-nexus/: Cargo.toml
crates/llm-nexus-budget/: Cargo.toml
crates/llm-nexus-budget/src/: lib.rs  middleware.rs  types.rs
crates/llm-nexus-cache/: Cargo.toml
crates/llm-nexus-cache/src/: hasher.rs  lib.rs  middleware.rs  semantic.rs  vector_index.rs
crates/llm-nexus-core/: Cargo.toml
crates/llm-nexus-core/src/: error.rs  lib.rs  loader.rs
crates/llm-nexus-core/src/middleware/: auth.rs  mod.rs  rate_limit.rs  retry.rs
crates/llm-nexus-core/src/pipeline/: context.rs  middleware.rs  mod.rs  test_helpers.rs
crates/llm-nexus-core/src/pipeline/builtin/: logging.rs  mod.rs  retry.rs  timeout.rs  tracing_mw.rs
crates/llm-nexus-core/src/store/: log_memory.rs  memory.rs  mod.rs
crates/llm-nexus-core/src/traits/: chat.rs  embedding.rs  logging.rs  metrics.rs  mod.rs  registry.rs  router.rs  store.rs  tracing.rs
crates/llm-nexus-core/src/types/: config.rs  embed.rs  mod.rs  model.rs  request.rs  response.rs
crates/llm-nexus-guardrail/: Cargo.toml
crates/llm-nexus-guardrail/src/: checks.rs  lib.rs  middleware.rs
crates/llm-nexus-mcp/: Cargo.toml
crates/llm-nexus-mcp/src/: client.rs  lib.rs  types.rs
crates/llm-nexus-metrics/: Cargo.toml
crates/llm-nexus-metrics/src/: aggregation.rs  cost_calculator.rs  in_memory.rs  lib.rs  prom.rs  sqlite.rs
crates/llm-nexus-provider-anthropic/: Cargo.toml
crates/llm-nexus-provider-anthropic/src/: chat.rs  convert.rs  lib.rs  stream.rs  types.rs
crates/llm-nexus-provider-azure/: Cargo.toml
crates/llm-nexus-provider-azure/src/: chat.rs  lib.rs
crates/llm-nexus-provider-bedrock/: Cargo.toml
crates/llm-nexus-provider-bedrock/src/: convert.rs  lib.rs
crates/llm-nexus-provider-deepseek/: Cargo.toml
crates/llm-nexus-provider-deepseek/src/: lib.rs
crates/llm-nexus-provider-gemini/: Cargo.toml
crates/llm-nexus-provider-gemini/src/: chat.rs  convert.rs  embedding.rs  lib.rs  stream.rs  types.rs
crates/llm-nexus-provider-openai/: Cargo.toml
crates/llm-nexus-provider-openai/src/: chat.rs  convert.rs  embedding.rs  lib.rs  stream.rs  types.rs
crates/llm-nexus-provider-vertex/: Cargo.toml
crates/llm-nexus-provider-vertex/src/: auth.rs  lib.rs
crates/llm-nexus-proxy/: Cargo.toml
crates/llm-nexus-proxy/src/: auth.rs  embed_types.rs  handlers.rs  lib.rs  main.rs  rate_limit.rs  sse.rs  types.rs  virtual_key.rs
crates/llm-nexus-proxy/tests/: proxy_integration.rs
crates/llm-nexus-registry/: Cargo.toml
crates/llm-nexus-registry/src/: filter.rs  lib.rs  remote.rs  static_registry.rs
crates/llm-nexus-router/: Cargo.toml
crates/llm-nexus-router/src/: composite.rs  cooldown.rs  cost_router.rs  experiment.rs  fallback.rs  lib.rs  scorer.rs
crates/llm-nexus/examples/: basic_chat.rs  bench_pipeline.rs  cost_routing.rs  streaming.rs
crates/llm-nexus/src/: client.rs  dispatcher.rs  lib.rs  provider_factory.rs  provider_map.rs
crates/llm-nexus/tests/: chat_providers.rs  common.rs  live_providers.rs  pipeline_integration.rs
