[package]
name = "llm-nexus-core"
version.workspace = true
edition.workspace = true
description = "Core traits, types, and middleware pipeline for llm-nexus"
license.workspace = true
repository = "https://github.com/Kingxiao/llm-nexus"
keywords = ["llm", "ai", "openai", "anthropic"]
categories = ["api-bindings"]

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
async-trait.workspace = true
futures.workspace = true
chrono.workspace = true
tracing.workspace = true
uuid.workspace = true
reqwest.workspace = true
pin-project-lite.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros", "rt", "time"] }
