[package]
name = "llm-nexus-guardrail"
version.workspace = true
edition.workspace = true
description = "Content moderation middleware with pluggable checks"
license.workspace = true
repository = "https://github.com/Kingxiao/llm-nexus"
keywords = ["llm", "ai", "openai", "anthropic"]
categories = ["api-bindings"]

[dependencies]
llm-nexus-core = { path = "../llm-nexus-core" }

async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
tracing.workspace = true
regex-lite = "0.1"  # verified: 2026-04-04

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
