[package]
name = "llm-nexus-mcp"
version.workspace = true
edition.workspace = true
description = "MCP Gateway client for tool discovery and execution"
license.workspace = true
repository = "https://github.com/Kingxiao/llm-nexus"
keywords = ["llm", "ai", "openai", "anthropic"]
categories = ["api-bindings"]

[dependencies]
llm-nexus-core = { path = "../llm-nexus-core" }

async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
tracing.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
