[package]
name = "llm-nexus-provider-deepseek"
version.workspace = true
edition.workspace = true
description = "DeepSeek provider delegating to OpenAI adapter"
license.workspace = true
repository = "https://github.com/Kingxiao/llm-nexus"
keywords = ["llm", "ai", "openai", "anthropic"]
categories = ["api-bindings"]

[dependencies]
llm-nexus-core = { path = "../llm-nexus-core" }
llm-nexus-provider-openai = { path = "../llm-nexus-provider-openai" }
async-trait.workspace = true
futures.workspace = true
reqwest.workspace = true

[dev-dependencies]
serde_json.workspace = true
wiremock.workspace = true
tokio = { workspace = true, features = ["test-util"] }
